--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -181,10 +181,17 @@
   }
 }
 
+/* media query from 660 */
+@media (max-width: 41.3em) {
+  .footer-container {
+    width: 61rem;
+  }
+}
+
 /* media query from 540 */
 @media (max-width: 33.8em) {
   .footer-container {
-    width: 51rem;
+    width: 61rem;
   }
   .footer-text-secondary {
     text-align: center;
@@ -194,7 +201,7 @@
 /* media query from 490 */
 @media (max-width: 31em) {
   .footer-container {
-    width: 38rem;
+    width: 44rem;
   }
   .footer-social-icons-container {
     display: flex;
