updated ResetPassword css

--- a/src/components/resetPassword.module.css
+++ b/src/components/resetPassword.module.css
@@ -1,6 +1,7 @@
 .section-reset {
   width: 60rem;
-  margin: 3rem auto;
+  /* height: 100vh; */
+  margin: 15rem auto;
 }
 
 .reset-container {
@@ -42,4 +43,32 @@
   padding-left: 2rem;
   text-transform: uppercase;
   color: #aa1414;
+}
+
+/* media query from 660 */
+@media (max-width: 41.3em) {
+  .section-reset {
+    width: 56rem;
+  }
+}
+
+/* media query from 490 */
+@media (max-width: 31em) {
+  .section-reset {
+    width: 48.5rem;
+  }
+}
+
+/* media query from 430 */
+@media (max-width: 25em) {
+  .section-reset {
+    width: 46rem;
+  }
+}
+
+/* media query from 380 */
+@media (max-width: 24.4em) {
+  .section-reset {
+    width: 42.5rem;
+  }
 }
