--- a/src/index.css
+++ b/src/index.css
@@ -95,6 +95,13 @@ body {
   margin-bottom: 4.2rem;
 }
 
+.heading-secondary-md {
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 1.2;
+  margin-bottom: 4.2rem;
+}
+
 .paragraph-primary {
   font-size: 1.65rem;
   font-weight: 400;
@@ -102,6 +109,12 @@ body {
   letter-spacing: 1px;
 }
 
+.paragraph-primary-md {
+  font-size: 1.65rem;
+  font-weight: 400;
+  line-height: 1.25;
+  letter-spacing: 1px;
+}
 .paragraph-blk {
   color: #000;
   font-size: 1.8rem;
@@ -208,10 +221,18 @@ body {
   }
 
   .heading-secondary {
+    font-size: 2rem;
+  }
+
+  .heading-secondary-md {
     font-size: 3rem;
   }
 
   .paragraph-primary {
+    font-size: 1.2rem;
+  }
+
+  .paragraph-primary-md {
     font-size: 2.5rem;
   }
 
@@ -242,10 +263,18 @@ body {
     padding: 0 1.2rem;
   }
   .heading-secondary {
+    font-size: 1.7rem;
+  }
+
+  .heading-secondary-md {
     font-size: 2.5rem;
   }
 
   .paragraph-primary {
+    font-size: 1.1rem;
+  }
+
+  .paragraph-primary-md {
     font-size: 2.1rem;
   }
 
