--- a/src/components/forum/articleContent.module.css
+++ b/src/components/forum/articleContent.module.css
@@ -24,6 +24,11 @@
   height: 100%;
 }
 
+.article-img-skeleton {
+  width: 100%;
+  height: 70vh;
+}
+
 .article-text-box {
   background-color: #0d0d0d;
   color: #fff;
