--- a/src/components/mostRead.module.css
+++ b/src/components/mostRead.module.css
@@ -34,6 +34,18 @@
   flex: 1 1 35%;
 }
 
+.mostRead-item-skeleton {
+  /* display: flex; */
+  margin-bottom: 1rem;
+  width: 100%;
+  /* gap: 2.4rem; */
+  /* align-items: center; */
+  /* padding: 0.1rem; */
+  border: 1px solid grey;
+  border-radius: 5px;
+  flex: 1 1 35%;
+}
+
 .mostRead-item:nth-child(odd)::after {
   content: "|";
   height: 5.5rem;
