--- a/src/components/News.module.css
+++ b/src/components/News.module.css
@@ -22,6 +22,13 @@
   height: 100%;
 }
 
+.news-skeleton {
+  margin-bottom: 1rem;
+  border-radius: 1rem;
+  width: 39.5rem;
+  height: 1.5rem;
+}
+
 .news-content-text-box {
   position: relative;
   height: 22rem;
@@ -37,6 +44,13 @@
   align-items: center;
   margin-top: 5rem;
 }
+/* media query from 1366 */
+@media (max-width: 85.4em) {
+  .news-skeleton {
+    width: 36.5rem;
+  }
+}
+
 /* media query from 1270 */
 @media (max-width: 79em) {
   .news-container {
@@ -56,6 +70,9 @@
   .news-content-img-box {
     width: 30rem;
   }
+  .news-skeleton {
+    width: 26.5rem;
+  }
 }
 
 /* media query from 1025 */
@@ -66,6 +83,9 @@
   }
   .news-content-img-box {
     width: 44rem;
+  }
+  .news-skeleton {
+    width: 36.5rem;
   }
 }
 
@@ -81,6 +101,9 @@
   .news-content-text-box {
     width: 100%;
     height: 100%;
+  }
+  .news-skeleton {
+    width: 61.5rem;
   }
 }
 
@@ -102,6 +125,9 @@
   .news-content-img-box {
     width: 30rem;
   }
+  .news-skeleton {
+    width: 45.5rem;
+  }
 }
 
 /* media query from 680 */
@@ -119,7 +145,7 @@
   .news-container {
     width: 63.5rem;
     padding: 0 1.2rem;
-    margin: 0 2.2rem;
+    /* margin: 0 2.2rem; */
   }
   .news-content-img-box {
     width: 25rem;
@@ -127,6 +153,9 @@
   .news-content-text-box {
     width: 100%;
     height: inherit;
+  }
+  .news-skeleton {
+    width: 39.5rem;
   }
 }
 
@@ -154,6 +183,10 @@
     padding: 10px;
     /* height: 21rem; */
   }
+
+  .news-skeleton {
+    width: 30.5rem;
+  }
 }
 
 /* media query from 380 */
@@ -178,5 +211,9 @@
   .news-content-text-box {
     height: inherit;
     padding: 10px;
+  }
+
+  .news-skeleton {
+    width: 22.5rem;
   }
 }
