--- a/src/components/forum/topicReplies.module.css
+++ b/src/components/forum/topicReplies.module.css
@@ -123,6 +123,15 @@
   box-shadow: 0 1.4rem 2.8rem rgba(0, 0, 0, 0.075);
 }
 
+.skeleton-user-reply {
+  display: flex;
+  gap: 2rem;
+  padding: 1.5rem;
+  background-color: #fff;
+  border-radius: 0.4rem;
+  box-shadow: 0 1.4rem 2.8rem rgba(0, 0, 0, 0.075);
+}
+
 .user-reply-container-mobile {
   display: none !important;
 }
