--- a/src/components/mostRead.module.css
+++ b/src/components/mostRead.module.css
@@ -41,7 +41,7 @@
   /* gap: 2.4rem; */
   /* align-items: center; */
   /* padding: 0.1rem; */
-  border: 1px solid grey;
+  /* border: 1px solid grey; */
   border-radius: 5px;
   flex: 1 1 35%;
 }
