Updated index hero news promotion virtual footer css

--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -65,6 +65,13 @@
   }
 }
 
+/* media query from 1240 */
+@media (max-width: 78em) {
+  .hero-img-skeleton-box {
+    height: 55vh;
+  }
+}
+
 /* media query from 1200 */
 @media (max-width: 75em) {
   .hero-img-skeleton-box {
