--- a/src/components/Promotions.module.css
+++ b/src/components/Promotions.module.css
@@ -45,6 +45,16 @@
   }
 }
 
+/* media query from 1240 */
+@media (max-width: 78em) {
+  .promotion-container {
+    width: 120rem;
+  }
+  .promotion-content-img-box {
+    width: 37rem;
+  }
+}
+
 /* media query from 1200 */
 @media (max-width: 76em) {
   .promotion-container {
